Resolves: fdo#37693 it really is a LineBorder not a LineBorder2